# model_evaluation_suite

./: .gitignore  README.md  environment_full.yml  pyproject.toml  requirements.txt
config/: data_prep.yaml  xgb_reg_validation.yaml  xgb_validation.yaml
config/classifier/: dtree.yaml  guas_nb.yaml  logreg.yaml  rforest.yaml  svc.yaml  xgboost.yaml
config/regressor/: dtree_reg.yaml  linreg.yaml  rf_reg.yaml  svr.yaml  xgboost_reg.yaml
exports/sample/gnb_demo_01/: static_report_gnb_demo_01.html
exports/sample/linreg_demo_01/: static_report_linreg_demo_01.html  statistical_summary.txt
exports/sample/logreg_baseline_01/: static_report_logreg_baseline_01.html  statistical_summary.txt
exports/sample/xgb_demo_01_production_validation/: statistical_summary.txt
exports/sample/xgbreg_demo_01/: static_report_xgbreg_demo_01.html
notebooks/: demo.html  demo.ipynb  plot_viewer.md  quick_start.ipynb
resource_hub/: hub_index.md  usage_guide.md
resource_hub/CLI_resources/: cli_usage_guide.md
resource_hub/config_resources/: config_guide.md  model_codex.md  model_factory_params.md
resource_hub/config_resources/annotated_example_yaml/: example_data_prep.yaml  example_default_config.yaml  example_modeling.yaml  example_validation_template.yaml
resource_hub/config_resources/template_yaml/: template_data.yaml  template_modeling.yaml  (+1 more)
resource_hub/modeling_resources/: MLFlow.md  feature_engineering.md
resource_hub/notebook_resources/: notebook_walkthrough.md
src/model_eval_suite/: __init__.py  data_prep.py  run_pipeline.py  validate_champion.py
(+34 files in other folders)
